--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -72,7 +72,7 @@
       top: 16px;
 
       &::before {
-        content: url('../../../../../assets/img/btn_delete.svg');
+        content: url("../../../../../assets/img/btn_delete.svg");
         display: inline-block;
         width: 20px;
         height: 20px;
@@ -262,7 +262,6 @@
           }
         }
 
-
         .thumbmain {
           border-right: 1px solid #fff;
 
@@ -307,14 +306,13 @@
           }
 
           .category {
-            background-color: #B6C2A6;
+            background-color: #b6c2a6;
             padding: 0 6px;
             line-height: 26px;
             margin-left: 7px;
             // border: 1px solid $color-gld04;
             border-radius: 3px;
-            color: rgba(0, 0, 0, .87);
-            ;
+            color: rgba(0, 0, 0, 0.87);
             white-space: nowrap;
             max-width: 34vw;
             overflow: hidden;
@@ -351,7 +349,6 @@
             }
 
             &.on {
-
               // background-color: $color-pnk04;
               &::before {
                 background: url(../../../../../assets/img/icon_fav_p_on.svg);
@@ -379,7 +376,7 @@
             width: 24px;
             height: 24px;
 
-            >i {
+            > i {
               color: #fff;
               font-size: 15px;
             }
@@ -425,7 +422,6 @@
         border-radius: 6px;
         width: 34px;
       }
-
     }
 
     .card-bottom {
@@ -440,7 +436,7 @@
         // display: flex;
         // flex-direction: row;
         font-size: 12px;
-        color: #4E4E4E;
+        color: #4e4e4e;
         font-weight: 500;
         // height: 26px;
         align-items: center;
@@ -461,9 +457,6 @@
             }
           }
         }
-
-
-
 
         .note {
           flex-basis: 90%;
@@ -491,7 +484,6 @@
           }
 
           &.on {
-
             // background-color: $color-pnk04;
             &::before {
               background: url("../../../../../assets/img/icon_bookmark_d_on.svg");
@@ -580,12 +572,10 @@
 
               &:last-child {
                 &::after {
-                  content: '';
+                  content: "";
                 }
               }
-
             }
-
           }
 
           p {
@@ -602,7 +592,6 @@
           }
 
           ::ng-deep.mat-list-item-content {
-
             // justify-content: space-around;
             .inlist {
               display: inline-flex;
@@ -709,7 +698,7 @@
             padding-right: 3px;
             padding-left: 2px;
 
-            label{
+            label {
               background: #707070;
               color: #fff;
               padding: 1px 4px;
@@ -819,7 +808,7 @@
           position: absolute;
           bottom: 12px;
 
-          .link-to-detail{
+          .link-to-detail {
             color: #fff;
             font-size: 14px;
             font-weight: 700;
@@ -845,12 +834,40 @@
             &.on {
               &::after {
                 content: "";
-                background: url("../../../../../assets/img/icon_onplan.svg") no-repeat;
+                background: url("../../../../../assets/img/icon_onplan.svg")
+                  no-repeat;
                 width: 24px;
                 height: 28px;
                 position: absolute;
                 right: 0px;
                 bottom: 18px;
+                animation: 0.7s ease-in 0s 1 jump;
+              }
+              @keyframes jump {
+                0% {
+                  transform: translateY(0px) rotateZ(0deg);
+                }
+                30% {
+                  transform: translateY(-30px) rotateZ(10deg);
+                }
+                35% {
+                  transform: translateY(-30px) rotateZ(-30deg);
+                }
+                45% {
+                  transform: translateY(-30px) rotateZ(30deg);
+                }
+                55% {
+                  transform: translateY(-30px) rotateZ(-30deg);
+                }
+                65% {
+                  transform: translateY(-30px) rotateZ(30deg);
+                }
+                70% {
+                  transform: translateY(-30px) rotateZ(10deg);
+                }
+                100% {
+                  transform: translateY(0px) rotateZ(0deg);
+                }
               }
             }
           }
@@ -876,7 +893,6 @@
             }
 
             &.on {
-
               // background-color: $color-pnk04;
               &::before {
                 background: url("../../../../../assets/img/icon_fav_b_on.svg");
@@ -895,12 +911,11 @@
   }
 }
 
-//@media screen and (min-width: 415px) and (max-width: 1024px) { 
+//@media screen and (min-width: 415px) and (max-width: 1024px) {
 @media screen and (min-width: 429px) and (max-width: 1024px) {
-
-  //@media screen and (min-width: 415px) { 
+  //@media screen and (min-width: 415px) {
   #planspot-list-item {
-    width: calc(100%/2);
+    width: calc(100% / 2);
     float: left;
 
     .header {
